# jihocg

./: .gitmodules  CMakeLists.txt  README.md
src/: Renderer.cpp  Renderer.h  main.cpp
